# algitex

./: .aider.chat.history.md  .aider.input.history  .code2llm_ignore  .code2llmignore  .gitignore  .prefactignore  CHANGELOG.md  Dockerfile  Makefile  README.md  README2.md  SUMD.md  SUMR.md  TODO.md  Taskfile.yml  app.doql.less  benchmark_parallel_fix.py  docker-compose.mcp.yml  docker-compose.yml  docker-tools.yaml  goal.yaml  litellm_config.yaml  planfile.yaml  prefact.yaml  pyproject.toml  pyqual.yaml  test_algo.py  test_cli.py  test_syntax.py
.pfix/: audit.jsonl
TODO/: abpr_pipeline.py  fix-auth.md  parallel.py  parallel_refactoring.py  workspace.yaml
articles/: README.md  code2llm-static-analysis.md  devloop-ecosystem-overview.md  devloop-unified-toolchain.md  llx-model-router.md  planfile-sdlc-automation.md  progressive-algorithmization.md  proxym-llm-gateway.md  redup-duplication-analyzer.md  vallm-code-validator.md
docker/: README.md  docker-compose.yml
docker/aider-mcp/: Dockerfile  aider_mcp_server.py
docker/code2llm/: Dockerfile  code2llm_mcp_server.py  code2llm_server.py
docker/planfile-mcp/: Dockerfile  planfile_mcp_server.py
docker/proxym/: Dockerfile  proxym_mcp_server.py  proxym_server.py
docker/vallm/: Dockerfile  vallm_mcp_server.py  vallm_server.py
docs/: BATCHFIX.md  MICROTASK.md  NEW_FEATURES.md  NLP.md  README.md  REFACTORING_SUMMARY.md  SPRINT4.md  SPRINT6.md  SPRINT7.md  algitex-parallel-coordination.md  autofix.md  todo.md
docs/api/: benchmark.md  cli.md  config.md  dashboard.md  index.md  metrics.md  prefact_integration.md  project.md  shared_rules.md
examples/: 01-aider-mcp-example.md  01_quickstart.py  02-filesystem-mcp-example.md  02_algo_loop.py  03-vallm-example.md  03_pipeline.py  04-docker-mcp-example.md  04_ide_integration.py  05-extended-features.md  05-github-mcp-example.md  05_cost_tracking.py  06-comprehensive-test-workflow.md  NEW_FEATURES.md  README.md  abpr_pipeline.py  context_example.py  docker-workflow-example.md  feedback_example.py  parallel_multi_tool.py  parallel_refactoring.py  telemetry_example.py  workspace_parallel.py
examples/01-quickstart/: Makefile  README.md  main.py  run.sh
examples/02-algo-loop/: Makefile  README.md  main.py  run.sh
examples/03-pipeline/: Makefile  README.md  main.py  run.sh
examples/04-ide-integration/: Makefile  README.md  main.py  run.sh
examples/05-cost-tracking/: Makefile  README.md  main.py  run.sh
examples/06-telemetry/: Makefile  README.md  main.py  (+1 more)
project/: README.md  analysis.toon.yaml  analysis_refactored.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
scripts/: fix_readme.py  generate_lib_docs.py
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: conftest.py  test_benchmark.py  test_cicd.py  test_cli.py  test_cli_metrics.py  test_context.py  test_core.py  test_dashboard.py  test_e2e_integration.py  test_examples_30_32.py  test_feedback.py  test_integration.py  test_integration_extended.py  test_metrics.py  test_ollama_cache.py  test_parallel.py  test_prefact_integration.py  test_shared_rules.py  test_telemetry.py  test_workspace.py
(+431 files in other folders)
