[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algitex"
version = "0.1.61"
description = "Progressive algorithmization toolchain — from LLM to deterministic code, from proxy to tickets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Tom Sapletta", email = "tom@sapletta.com"}]
keywords = [
    "llm", "devtools", "proxy", "tickets", "progressive-algorithmization",
    "mcp", "propact", "code-analysis", "automation", "workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "clickmd>=1.0",
    "pydantic>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
all = ["proxym", "planfile", "llx", "vallm", "code2llm", "redup"]
proxy = ["proxym"]
tickets = ["planfile"]
analysis = ["code2llm", "vallm", "redup"]
routing = ["llx"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
algitex = "algitex.cli:app"

[project.urls]
Homepage = "https://github.com/semcod/algitex"
Repository = "https://github.com/semcod/algitex"

[tool.setuptools.packages.find]
where = ["src"]


[tool.pfix]
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = true
max_retries = 3
create_backups = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
